--- a/index.html
+++ b/index.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-          crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg bg-gradient" id="navbar">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="assets/navbar_logo_trimed.png" alt="Logo" width="350" height="50" class="d-inline-block align-text-top">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end navbar-content" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-        </div>
+  <nav class="navbar sticky-top navbar-expand-lg" id="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="assets/navbar_logo_trimed.png" alt="Logo" width="350" height="50">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end navbar-content" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!-- <div id="introduction">
+    </div>
+  </nav>
+  <!-- <div id="introduction">
       <div id="introduction-text">
           <h1>Somos una Fundación dedicada a mejorar la calidad de vida de las personas y su entorno, a través de la tecnología.</h1>
       </div>
@@ -56,86 +60,140 @@
   </div> -->
   <div class="container-fluid">
     <div class="row justify-content-center row-container" id="rc1">
-        <div class="carousel-container">
-             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/logo_background.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/background_collage.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                <img src="assets/providers.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                  </div>
+      <div class="carousel-container">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/logo_background.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/background_collage.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Divisiones</h3>
+                <p>Indusrial - Automotores - Productos especiales - Sellos mecánicos</p>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+            <div class="carousel-item">
+              <img src="assets/providers.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Nuestros proveedores</h3>
+                <p>Nos acompañan para brindar el mejor servicio en la zona</p>
+              </div>
+            </div>
           </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
+      </div>
     </div>
     <div class="row justify-content-center row-container" id="rc2">
-        <div class="col-2">
-        </div>
-        <div class="col-8" id="header-1">
-            <h3>
-                Una empresa de salta, ubicada en San Ramon de la nueva Oran, con más de 30 años de
-trayectoria, cuenta con soluciones electromecánicas para la industria:
-            </h3>
-        </div>
-        
-        <div class="col-2">
-        </div>
+      <div class="col-2">
+      </div>
+      <div class="col-8" id="header-1">
+        <h3>
+          Una empresa de salta, ubicada en San Ramon de la nueva Oran, con más de 30 años de
+          trayectoria, cuenta con soluciones electromecánicas para la industria:
+        </h3>
+      </div>
+
+      <div class="col-2">
+      </div>
     </div>
     <div class="row justify-content-center" id="bg-img-container">
     </div>
-  </div>
-  
-  
-  <footer>
-      <div>
-          <div class="footer-item">
-              <img src="assets/nortebombas_tm_2.png" alt="">
-          </div>
-          <div id="footer-p">
-              <p>Trabajamos para acercar la tecnología innovadora y disruptiva del sector privado hacia el sector social.</p>
-          </div>
-          <div class="link">
-              <p>
-                  <a href="https://technologywithpurpose.org/nosotros/">NOSOTROS</a><br>
-                  <a href="https://technologywithpurpose.org/contacto/">CONTACTO</a>
-              </p>
-          </div>
-          <div class="link">
-              <p>
-                  <a href="#programas">PROGRAMAS</a><br>
-                  <a href="#capacitaciones">CAPACITACIONES</a>
-              </p>
-          </div>
-          <div class="link">
-              <p>
-                  <a href="https://www.instagram.com/technologywithpurpose/">INSTAGRAM</a><br>
-                  <a href="https://www.linkedin.com/company/technologywithpurpose/">LINKEDIN</a>
-              </p>
-          </div>
+    <div class="row row-card-container">
+      <div class="img-content col-6">
+        <img src="assets/industrial_bomb_background.png" class="fade-in" id="card-img">
       </div>
+      <div class="side-text-content col-6 slide-in" id="card-txt">
+        <h1>División Industrial</h1>
+        <div class="text">
+          <p>Venta y reparación de Motores, Reductores, Electrobombas, Hidrolavadoras, Bombas
+            Sumergibles, bombas cloacales, Moto Bombas, Bombas de desplazamiento positivo (Pistón y
+            engranaje).</p>
+        </div>
+        <div class="button">
+          <button class="redondo" id="btn-next">siguiente -></button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center" id="bg-info-cards-container">
+    <div class="row left-info-card hide-left card">
+      <div class="info-card-text col-4 side-text-content">
+        <h1>INTECHSEAL</h1>
+        <div class="text fs-3">
+          <p>Venta y reparación de Motores, Reductores, Electrobombas, Hidrolavadoras, Bombas
+            Sumergibles, bombas cloacales, Moto Bombas, Bombas de desplazamiento positivo (Pistón y
+            engranaje).</p>
+        </div>
+      </div>
+      <div class="col-2">
+
+      </div>
+      <div class="img-info-container col-4">
+        <img src="assets/mechanical_seal.jpeg">
+      </div>
+    </div>
+    <div class="row right-info-card card">
+      <div class="img-info-container col-4">
+        <img src="assets/mechanical_seal.jpeg">
+      </div>
+      
+      <div class="col-2">
+
+      </div>
+      <div class="info-card-text col-4 side-text-content">
+        <h1>INTECHSEAL</h1>
+        <div class="text fs-3">
+          <p>Venta y reparación de Motores, Reductores, Electrobombas, Hidrolavadoras, Bombas
+            Sumergibles, bombas cloacales, Moto Bombas, Bombas de desplazamiento positivo (Pistón y
+            engranaje).</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div>
+      <div class="footer-item">
+        <img src="assets/nortebombas_tm_2.png" alt="">
+      </div>
+      <div id="footer-p">
+        <p>Trabajamos para acercar la tecnología innovadora y disruptiva del sector privado hacia el sector social.</p>
+      </div>
+      <div class="link">
+        <p>
+          <a href="#">NOSOTROS</a><br>
+          <a href="#">CONTACTO</a>
+        </p>
+      </div>
+      <div class="link">
+        <p>
+          <a href="#programas">PROGRAMAS</a><br>
+          <a href="#capacitaciones">CAPACITACIONES</a>
+        </p>
+      </div>
+      <div class="link">
+        <p>
+          <a href="https://www.instagram.com/technologywithpurpose/">INSTAGRAM</a><br>
+          <a href="https://www.linkedin.com/company/technologywithpurpose/">LINKEDIN</a>
+        </p>
+      </div>
+    </div>
   </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
