Cards overflowing bug fixed

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
     <div class="row justify-content-center" id="bg-img-container">
     </div>
     <div class="row row-card-container">
-      <div class="img-content col-6">
-        <img src="assets/industrial_bomb_background.png" class="fade-in" id="card-img">
+      <div class="img-content col-sm-6">
+        <img src="assets/industrial_bomb_background.png" class="fade-in img-fluid" id="card-img">
       </div>
-      <div class="side-text-content col-6 slide-in" id="card-txt">
+      <div class="side-text-content col-sm-6 slide-in" id="card-txt">
         <h1>División Industrial</h1>
         <div class="text">
           <p>Venta y reparación de Motores, Reductores, Electrobombas, Hidrolavadoras, Bombas
@@ -126,40 +126,88 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-center" id="bg-info-cards-container">
-    <div class="row left-info-card hide-left card">
+  <div class="row" id="bg-info-cards-container">
+    <div class="row left-info-card hide-left infocard">
       <div class="info-card-text col-4 side-text-content">
-        <h1>INTECHSEAL</h1>
-        <div class="text fs-3">
-          <p>Venta y reparación de Motores, Reductores, Electrobombas, Hidrolavadoras, Bombas
-            Sumergibles, bombas cloacales, Moto Bombas, Bombas de desplazamiento positivo (Pistón y
-            engranaje).</p>
+        <h1>SALON COMERCIAL</h1>
+        <div class="text fs-5">
+          <p>Bombas nuevas y recambios línea agrícola
+            Juegos de reparación
+            Rodamientos – Retenes - Oring
+            Empaquetaduras - Sellos mecánicos
+            Impulsores (plásticos – Bronce)
+            Capacitores - Ventiladores plásticos - Borneras
+            Manchones de Acoples Elásticos
+            Sistema de tratamiento de agua para piletas - Ionizadores
+            Desengrasante Industrial - Solvente Dieléctrico – otras aplicaciones</p>
         </div>
       </div>
       <div class="col-2">
 
       </div>
       <div class="img-info-container col-4">
-        <img src="assets/mechanical_seal.jpeg">
+        <img src="assets/mechanical_seal.jpeg" class="img-fluid">
       </div>
     </div>
-    <div class="row right-info-card card">
+    <div class="row right-info-card hide-right infocard">
       <div class="img-info-container col-4">
-        <img src="assets/mechanical_seal.jpeg">
+        <img src="assets/mechanical_seal.jpeg" class="img-fluid">
       </div>
-      
-      <div class="col-2">
-
-      </div>
+      <div class="col-2"></div>
       <div class="info-card-text col-4 side-text-content">
-        <h1>INTECHSEAL</h1>
-        <div class="text fs-3">
-          <p>Venta y reparación de Motores, Reductores, Electrobombas, Hidrolavadoras, Bombas
-            Sumergibles, bombas cloacales, Moto Bombas, Bombas de desplazamiento positivo (Pistón y
-            engranaje).</p>
+        <h1>TALLER ESPECIALIZADO</h1>
+        <div class="text fs-5">
+          <p>Reparación de motores eléctricos
+            Reparación de Bombas Centrifugas ejes libre
+            Reparación de Electrobombas
+            Reparación de Moto-reductores
+            Reparación de Sellos mecánicos
+            Contamos con:
+            Maquina de Soldar
+            Torno Mecánico
+            Rectificadora tangencial
+            Banco de pruebas de Bombas
+            Lapidadora de sellos mecánicos
+            Limadora
+            Agujereadora - Fresadora
+            Maquina bobinadora</p>
         </div>
       </div>
     </div>
+    <div class="row left-info-card hide-left infocard">
+        <div class="info-card-text col-4 side-text-content">
+          <h1>INTECHSEAL</h1>
+          <div class="text fs-5">
+            <p>INTECH SEAL cuenta con una sumatoria de más de 30 años de experiencia en el mercado de sellos mecánicos.
+                Posee un centro de servicios integral, equipado con maquinarias de última generación, que permiten reparar todo tipo de sellos
+                mecánicos, asegurando la calidad y una marcada reducción en los costos asumidos. Así mismo se cuenta con un área de
+                mecanizado, para la producción de piezas metálicas.
+                Se realiza la conversión de equipos empaquetados a sistemas de sello mecánico.
+                Se asesora en la selección del sistema de sellado más propicio para la aplicación, contando con toda la gama de productos para
+                tal fin.</p>
+          </div>
+        </div>
+        <div class="col-2">
+  
+        </div>
+        <div class="img-info-container col-4">
+          <img src="assets/mechanical_seal.jpeg" class="img-fluid">
+        </div>
+      </div>
+      <div class="row right-info-card hide-right infocard">
+        <div class="img-info-container col-4">
+          <img src="assets/mechanical_seal.jpeg" class="img-fluid">
+        </div>
+        <div class="col-2"></div>
+        <div class="info-card-text col-4 side-text-content">
+          <h1>INTECHSEAL</h1>
+          <div class="text fs-5">
+            <p>Venta y reparación de Motores, Reductores, Electrobombas, Hidrolavadoras, Bombas
+              Sumergibles, bombas cloacales, Moto Bombas, Bombas de desplazamiento positivo (Pistón y
+              engranaje).</p>
+          </div>
+        </div>
+      </div>
   </div>
 
   <footer>
