New features at card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       </div>
       <div class="side-text-content col-sm-6 slide-in" id="card-txt">
         <h1>División Industrial</h1>
+        <img src="assets/Logomejorado.png" alt="" class="img-fluid" hidden>
         <div class="text">
           <p>Venta y reparación de Motores, Reductores, Electrobombas, Hidrolavadoras, Bombas
             Sumergibles, bombas cloacales, Moto Bombas, Bombas de desplazamiento positivo (Pistón y
@@ -142,16 +143,17 @@
             Desengrasante Industrial - Solvente Dieléctrico – otras aplicaciones</p>
         </div>
       </div>
-      <div class="col-2">
+      <!-- <div class="col-2">
 
-      </div>
-      <div class="img-info-container col-4">
-        <img src="assets/mechanical_seal.jpeg" class="img-fluid">
+      </div> -->
+      <div class="img-info-container image-fader col-7">
+        <img src="assets/nortebombas_store.png" class="img-fluid" style="width: 44em; height: 22em;">
+        <img src="assets/premise.png" class="img-fluid" style="width: 44em; height: 22em;">
       </div>
     </div>
     <div class="row right-info-card hide-right infocard">
       <div class="img-info-container col-4">
-        <img src="assets/mechanical_seal.jpeg" class="img-fluid">
+        <img src="assets/taller_loop.png" class="img-fluid">
       </div>
       <div class="col-2"></div>
       <div class="info-card-text col-4 side-text-content">
