New elements added at index

--- a/index.html
+++ b/index.html
@@ -210,6 +210,27 @@
           </div>
         </div>
       </div>
+
+      <div class="row">
+
+        <div class="col-sm-5 image-fader launchpad-frame">
+          <img src="assets/nortebombas_store.png" class="img-fluid" style="width: 44em; height: 22em;">
+          <img src="assets/premise.png" class="img-fluid" style="width: 44em; height: 22em;">
+          <span>
+            <h3>Nuestros trabajos</h3>
+            <p>Aquí va una pequeña reseña</p>
+          </span>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-5 image-fader launchpad-frame">
+          <img src="assets/nortebombas_store.png" class="img-fluid" style="width: 44em; height: 22em;">
+          <img src="assets/premise.png" class="img-fluid" style="width: 44em; height: 22em;">
+          <span>
+            <h3>Nuestros trabajos</h3>
+            <p>Aquí va una pequeña reseña</p>
+          </span>
+        </div>
+      </div>
   </div>
 
   <footer>
