--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link text-light" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+              Contacto
+            </a>
           </li>
         </ul>
       </div>
@@ -157,43 +159,36 @@
       </div>
       <div class="col-2"></div>
       <div class="info-card-text col-4 side-text-content">
-        <h1>TALLER ESPECIALIZADO</h1>
+        <h2>TALLER ESPECIALIZADO</h2>
         <div class="text fs-5">
-          <p>Reparación de motores eléctricos
-            Reparación de Bombas Centrifugas ejes libre
-            Reparación de Electrobombas
-            Reparación de Moto-reductores
-            Reparación de Sellos mecánicos
-            Contamos con:
-            Maquina de Soldar
-            Torno Mecánico
-            Rectificadora tangencial
-            Banco de pruebas de Bombas
-            Lapidadora de sellos mecánicos
-            Limadora
-            Agujereadora - Fresadora
-            Maquina bobinadora</p>
+          <ul>
+            <li>Reparación de motores eléctricos</li>
+            <li>Reparación de Bombas Centrifugas ejes libre</li>
+            <li>Reparación de Electrobombas</li>
+            <li>Reparación de Moto-reductores</li>
+            <li>Reparación de Sellos mecánicos</li>
+          </ul>
         </div>
       </div>
     </div>
     <div class="row left-info-card hide-left infocard">
         <div class="info-card-text col-4 side-text-content">
-          <h1>INTECHSEAL</h1>
+          <h2>SERVICIOS DE MANTENIMIENTO E INGENIERIA</h2>
           <div class="text fs-5">
-            <p>INTECH SEAL cuenta con una sumatoria de más de 30 años de experiencia en el mercado de sellos mecánicos.
-                Posee un centro de servicios integral, equipado con maquinarias de última generación, que permiten reparar todo tipo de sellos
-                mecánicos, asegurando la calidad y una marcada reducción en los costos asumidos. Así mismo se cuenta con un área de
-                mecanizado, para la producción de piezas metálicas.
-                Se realiza la conversión de equipos empaquetados a sistemas de sello mecánico.
-                Se asesora en la selección del sistema de sellado más propicio para la aplicación, contando con toda la gama de productos para
-                tal fin.</p>
+            <ul>
+              <li>Asesoramiento en técnicas de mantenimiento</li>
+              <li>Diagnostico de equipos con inspecciones preventivas y predictivas</li>
+              <li>Asistencias en campos para desmontar – Montar equipos rotantes</li>
+              <li>Asesoramiento en seguridad en equipos rotantes</li>
+              <li>Capacitaciones</li>
+            </ul>
           </div>
         </div>
         <div class="col-2">
   
         </div>
         <div class="img-info-container col-4">
-          <img src="assets/mechanical_seal.jpeg" class="img-fluid">
+          <img src="assets/mantenimiento2.jpg" class="img-fluid">
         </div>
       </div>
       <div class="row right-info-card hide-right infocard">
@@ -210,27 +205,178 @@
           </div>
         </div>
       </div>
-
-      <div class="row">
-
-        <div class="col-sm-5 image-fader launchpad-frame">
-          <img src="assets/nortebombas_store.png" class="img-fluid" style="width: 44em; height: 22em;">
-          <img src="assets/premise.png" class="img-fluid" style="width: 44em; height: 22em;">
-          <span>
-            <h3>Nuestros trabajos</h3>
-            <p>Aquí va una pequeña reseña</p>
-          </span>
-        </div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-5 image-fader launchpad-frame">
-          <img src="assets/nortebombas_store.png" class="img-fluid" style="width: 44em; height: 22em;">
-          <img src="assets/premise.png" class="img-fluid" style="width: 44em; height: 22em;">
-          <span>
-            <h3>Nuestros trabajos</h3>
-            <p>Aquí va una pequeña reseña</p>
-          </span>
-        </div>
+  </div>
+  <div class="row card-container">
+    <!-- <div class="card col-md-6" style="width: 30rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
+    </div>
+    <div class="card col-md-6" style="width: 30rem;">
+      <img src="assets/before.png" class="card-img-top img-fluid slides" alt="...">
+      <img src="assets/after.png" class="card-img-top img-fluid slides" alt="...">
+      <img src="assets/before1.png" class="card-img-top img-fluid slides" alt="...">
+      <img src="assets/after1.png" class="card-img-top img-fluid slides" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div> -->
+    <div class="card col-sm-4">
+      <!-- <img src="assets/mantenimiento2.jpg"  class="card-img-top" alt=""> -->
+      <div class="card-body">
+        <h5>SERVICIOS DE MANTENIMIENTO – INGENIERIA</h5>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                <strong>Asesoramiento en técnicas de mantenimiento</strong>
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <ul>
+                  <li>Análisis Situación Actual - Identificar Puntos critico</li>
+                  <li>Planteo de estrategias de mantenimiento según Análisis (Correctivo – Preventivo – Predictivo – Programado)</li>
+                  <li>Gestión de un plan de mantenimiento (Salud de Equipos)</li>
+                </ul>
+                </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                <strong>Diagnostico de equipos con inspecciones preventivas y predictivas</strong>
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <ul>
+                  <li>Termografía</li>
+                  <li>Análisis de Vibraciones</li>
+                  <li>Consumo de corriente para medir salud Equipos.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                <strong>Asistencias en campos para desmontar – Montar equipos rotantes</strong>
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Asistencia en campo para el desmontajes y montaje de bombas y motores eléctricos</div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                <strong>Asesoramiento en seguridad en equipos rotantes</strong>
+              </button>
+            </h2>
+            <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Análisis de condición de Equipos para evitar accidentes en la operación y mantenimiento</div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                <strong>Capacitaciones</strong>
+              </button>
+            </h2>
+            <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <ul>
+                  <li>Lubricación</li>
+                  <li>Alineación de Equipos</li>
+                  <li>Inspecciones</li>
+                  <li>Operación y Mantenimiento Bombas Centrifugas</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <a href="#" class="btn btn-primary">Ir al catálogo</a> -->
+      </div>
+    </div>
+    <!-- <div class="card col-sm-3" style="width: 30rem; padding-top: 0.5rem;"> -->
+    <div class="card col-sm-4">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/before.png" class="d-block w-100 img-fluid alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/after.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/before1.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/after1.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev" hidden>
+          <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span> -->
+        </button>
+        <button class="carousel-control-next next-btn" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next" hidden>
+          <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span> -->
+        </button>
+      </div>
+      <div class="card-body">
+        <div class="card-header">
+          <h4 class="card-title">Contamos con:</h4>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Maquina de Soldar</li>
+          <li class="list-group-item">Torno Mecánico</li>
+          <li class="list-group-item">Rectificadora tangencial</li>
+          <li class="list-group-item">Banco de pruebas de Bombas</li>
+          <li class="list-group-item">Lapidadora de sellos mecánicos</li>
+          <li class="list-group-item">Limadora</li>
+          <li class="list-group-item">Agujereadora - Fresadora</li>
+          <li class="list-group-item">Maquina bobinadora</li>
+        </ul>
+      </div>
+    </div>
+    <div class="card col-md-6" style="width: 30rem; padding-top: 0.5rem;">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/before.png" class="d-block w-100 img-fluid alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/after.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/before1.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/after1.png" class="d-block w-100 img-fluid" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev" hidden>
+          <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span> -->
+        </button>
+        <button class="carousel-control-next next-btn" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next" hidden>
+          <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span> -->
+        </button>
+      </div>
+      <div class="card-body">
+        <h4 class="card-title">Nuestros trabajos</h4>
+        <p class="card-text fs-5">Heche un vistazo a la calidad de nuestros servicios, avalados por la satisfacción de nuestros clientes.
+        </p>
+        <a href="#" class="btn btn-primary">Ir al catálogo</a>
+      </div>
+    </div>
   </div>
 
   <footer>
@@ -239,7 +385,10 @@
         <img src="assets/nortebombas_tm_2.png" alt="">
       </div>
       <div id="footer-p">
-        <p>Trabajamos para acercar la tecnología innovadora y disruptiva del sector privado hacia el sector social.</p>
+        <h4>Administración y Venta: Gabriela Mercado</h4>
+        <p><strong>Tel:</strong>  3878 422061<br>
+          <strong>Cel:</strong>   3878 330318<br>
+          Alvarado 1090 C/P 4530 Oran-Salta</p>
       </div>
       <div class="link">
         <p>
@@ -261,10 +410,30 @@
       </div>
     </div>
   </footer>
+  <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div>
+        Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+      </div>
+      <div class="dropdown mt-3">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+          Dropdown button
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
-
 </html>
